fix: correccion de config sonarcloud project key and organization v5

--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -37,3 +37,4 @@ jobs:
           -Dsonar.projectKey=franjvp_devsecops-laboratorio
           -Dsonar.organization=franjvp-devsecops
           -Dsonar.sources=.
+          -Dsonar.branch.name=main
