--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -2,9 +2,9 @@ name: DevSecOps Pipeline - Fase 1 SAST
 
 on:
   push:
-    branches: [ test ]
+    branches: [ test, mian ]
   pull_request:
-    branches: [ test ]
+    branches: [ test, main ]
 
 jobs:
   security-sast:
@@ -37,4 +37,3 @@ jobs:
           -Dsonar.projectKey=franjvp_devsecops-laboratorio
           -Dsonar.organization=franjvp-devsecops
           -Dsonar.sources=.
-          -Dsonar.branch.name=main
