fix: correccion de config sonarcloud project key and organization v5

--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -2,7 +2,7 @@ name: DevSecOps Pipeline - Fase 1 SAST
 
 on:
   push:
-    branches: [ test, mian ]
+    branches: [ test, main ]
   pull_request:
     branches: [ test, main ]
 
