feat: add SCA configuration para analizar el flujo

--- a/.github/workflows/security_analysis.yml
+++ b/.github/workflows/security_analysis.yml
@@ -35,3 +35,20 @@ jobs:
       with:
         args: >
           -Dproject.settings=sast-config.properties
+ #####################################3
+ # Analisis SCA
+ #
+- name: OWASP Dependency Check SCA
+      uses: dependency-check/Dependency-Check_Action@main
+      env:
+        PROJECT_SETTINGS: sca-config.properties
+      with:
+        project: 'devsecops-laboratorio'
+        path: '.'
+        format: 'HTML'
+        args: >
+          --scan .
+          --out reports/
+          --failOnCVSS 5
+          --enableRetired
+
