fix: borra duplicado v2

--- a/.github/workflows/security_analysis.yml
+++ b/.github/workflows/security_analysis.yml
@@ -1,4 +1,4 @@
-name: SAST Analysis with SonarQube
+name: SAST SCA Analysis del codigo
 
 on:
   push:
@@ -38,7 +38,7 @@ jobs:
  #####################################3
  # Analisis SCA
  #
-- name: OWASP Dependency Check SCA
+    - name: OWASP Dependency Check SCA
       uses: dependency-check/Dependency-Check_Action@main
       env:
         PROJECT_SETTINGS: sca-config.properties
@@ -51,4 +51,5 @@ jobs:
           --out reports/
           --failOnCVSS 5
           --enableRetired
+
 
