fix: borra duplicado v3

--- a/sast-config.properties
+++ b/sast-config.properties
@@ -2,6 +2,7 @@
 # Project identification
 sonar.projectKey=franjvp_devsecops-laboratorio
 sonar.projectName=devsecops-laboratorio
+sonar.organization=franjvp-devsecops
 
 # Analysis scope - SAST focuses on security issues
 sonar.sources=.
@@ -9,7 +10,7 @@ sonar.exclusions=node_modules/**,**/*.spec.js,**/*.test.js,coverage/**,dist/**
 
 # Security-focused analysis
 sonar.language=js
-sonar.security.config=security-config.json
+#sonar.security.config=security-config.json
 
 # Source encoding
 sonar.sourceEncoding=UTF-8
