--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -1,4 +1,4 @@
-name: SAST SCA Analysis del codigo
+name: DevSecOps Complete Pipeline
 
 on:
   push:
@@ -7,8 +7,9 @@ on:
     branches: [ main, test ]
 
 jobs:
-  sast-analysis:
-    name: SAST Security Scan
+  # FASE 1: SAST + SCA
+  security-analysis:
+    name: SAST and SCA Security Scan
     runs-on: ubuntu-latest
 
     steps:
@@ -26,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    # SAST con SonarCloud usando configuración específica
+    # SAST con SonarCloud
     - name: SonarCloud SAST Scan
       uses: SonarSource/sonarcloud-github-action@v2
       env:
@@ -35,9 +36,8 @@ jobs:
       with:
         args: >
           -Dproject.settings=sast-config.properties
- #####################################3
- # Analisis SCA
- #
+
+    # SCA con OWASP Dependency Check
     - name: OWASP Dependency Check SCA
       uses: dependency-check/Dependency-Check_Action@main
       env:
@@ -52,11 +52,36 @@ jobs:
           --failOnCVSS 5
           --enableRetired
 
- # SUBIR REPORTES SCA
+    # Subir reportes SCA
     - name: Upload SCA Reports
       uses: actions/upload-artifact@v4
-      if: always()  # ← Esto sube el reporte aunque el pipeline falle
+      if: always()
       with:
         name: sca-security-reports
         path: reports/
         retention-days: 30
+
+  # FASE 2: DOCKER BUILD (depende de que pase security)
+  docker-build:
+    name: Build Docker Image
+    runs-on: ubuntu-latest
+    needs: security-analysis  # ← Espera a que termine security
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Setup Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    # Construir imagen Docker
+    - name: Build Docker image
+      run: |
+        docker build -t devsecops-app:${{ github.sha }} .
+        docker tag devsecops-app:${{ github.sha }} devsecops-app:latest
+
+    # Verificar imagen
+    - name: Verify Docker image
+      run: |
+        echo "SUCCESS Imagen Docker construida:"
+        docker images devsecops-app
