--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -66,7 +66,8 @@ jobs:
     name: Build Docker Image
     runs-on: ubuntu-latest
     needs: security-analysis  # ← Espera a que termine security
-    
+       if: always()  # ← AGREGAR ESTA LÍNEA para que se realice siempre
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
