--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -86,3 +86,43 @@ jobs:
       run: |
         echo "SUCCESS Imagen Docker construida:"
         docker images devsecops-app
+        ##########################################
+        #
+  # FASE 3: CONTAINER SECURITY (depende de docker build)
+  container-security:
+    name: Container Security Scan
+    runs-on: ubuntu-latest
+    needs: docker-build
+    if: always()
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    # Construir imagen (mismo que antes)
+    - name: Build Docker image for scanning
+      run: |
+        docker build -t devsecops-app:${{ github.sha }} .
+
+    # SECURITY: Escanear imagen con Trivy
+    - name: Scan image with Trivy
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: 'devsecops-app:${{ github.sha }}'
+        format: 'sarif'
+        output: 'trivy-results.sarif'
+        severity: 'CRITICAL,HIGH,MEDIUM'
+
+    # Forzar fallo si hay vulnerabilidades
+    - name: Fail on vulnerabilities
+      run: |
+        if [ -f "trivy-results.sarif" ]; then
+          echo "📊 Resultados de Trivy:"
+          VULNERABILITIES=$(grep -c '"level":"error"' trivy-results.sarif || true)
+          if [ "$VULNERABILITIES" -gt "0" ]; then
+            echo "❌ Se encontraron $VULNERABILITIES vulnerabilidades. Fallando pipeline..."
+            exit 1
+          else
+            echo "✅ No se encontraron vulnerabilidades críticas/altas/medias"
+          fi
+        fi
