--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -60,6 +60,7 @@ jobs:
 
     # SCA con OWASP Dependency Check
     - name: OWASP Dependency Check SCA
+      if: always()
       uses: dependency-check/Dependency-Check_Action@main
       env:
         PROJECT_SETTINGS: sca-config.properties
